--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <title>Employees</title>
 
     <link rel="icon" type="image/svg+xml" href="/react.svg" />
+
+    <!-- Conntet Assets -->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" />
   </head>
   <body>
-    <div id="root"></div>
-
+    <div class="wrapper" id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
