--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <title>Employees</title>
 
+    <!-- Connecting Page favicons -->
     <link rel="icon" type="image/svg+xml" href="/react.svg" />
 
     <!-- Conntet Assets -->
