--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Connecting Page favicons -->
     <link rel="icon" type="image/svg+xml" href="/react.svg" />
 
-    <!-- Conntet Assets -->
+    <!-- Connteting Page assets -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" />
   </head>
   <body>
